замінив 'photo/mail' готово 'section subscribe'

--- a/dasteen/dasteen.html
+++ b/dasteen/dasteen.html
@@ -23,7 +23,6 @@
         </ul>
         </nav>
     </header>
-    <main>
     <section class="registration">
         <div>
         <div><h2>Hi, i’m Dasteen Front end dev</h2></div>
@@ -362,14 +361,21 @@
         <button class="button-art">More Article</button>
         </section>
     </section>
-        <section class="subscribe">
-            <div class="subscribe-info">
-                <svg xmlns="http://www.w3.org/2000/svg" width="130" height="130" viewBox="0 0 130 130" fill="none">
-                    <circle cx="65" cy="65" r="65" fill="#FFFFFE"/>
-                </svg>
-                <div></div>
+        <section class="section-sub">
+            <div class="subscribe">
+            <img src="photo/mail.png" alt="mail">
+                <div class="sub-title">
+                    <span class="title-sub">Subscribe For the lastest updates</span>
+                    <p>Subscribe to newsletter and never miss the new post every week.</p>
+                </div>
+                <form class="button-sub">
+                    <label for="mail"></label>
+                    <input type="email" name="mail" id="mail" required placeholder="Enter your email here....">
+                    <label class="checkbox-button">
+                        <input type="submit" value="Subscribe">
+                    </label>
+                </form>
             </div>
         </section>
-    </main>
 </body>
 </html>
