замінив 'photo/mail' готово 'section subscribe' початок 'footer' добавлено 4 photo для 'footer'

--- a/dasteen/dasteen.html
+++ b/dasteen/dasteen.html
@@ -377,5 +377,13 @@
                 </form>
             </div>
         </section>
+    <footer>
+        <div class="footer">
+            <div class="about-web">
+                <div class="dasteen-title"><h1>Dasteen<span>.Blog</span></h1></div>
+                <p>Digitaldastin by Dastin Darmawan</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
