--- a/dasteen/dasteen.html
+++ b/dasteen/dasteen.html
@@ -380,10 +380,54 @@
     <footer>
         <div class="footer">
             <div class="about-web">
+                <div class="footer-logo">
                 <div class="dasteen-title"><h1>Dasteen<span>.Blog</span></h1></div>
+                </div>
                 <p>Digitaldastin by Dastin Darmawan</p>
+                    <a href="#">
+                        <img src="photo/Social-Media-Link.png" alt="social media link">
+                    </a>
+                </div>
+                <div class="footer-link">
+                    <div class="footer-category">
+                        <p>Category</p>
+                        <ul>
+                            <li><a href="#">CSS</a></li>
+                            <li><a href="#">Javascript</a></li>
+                            <li><a href="#">Tailwind</a></li>
+                            <li><a href="#">React JS</a></li>
+                            <li><a href="#">More Category</a></li>
+                        </ul>
+                    </div>
+                    <div class="about">
+                        <p>About Me</p>
+                        <ul>
+                            <li><a href="#">About Me</a></li>
+                            <li><a href="#">Projects</a></li>
+                            <li><a href="#">Achievement</a></li>
+                        </ul>
+                    </div>
+                    <div class="touch">
+                        <p>Get in touch</p>
+                        <ul>
+                            <li>+62-8XXX-XXX-XX</li>
+                            <li>demo@gmail.com</li>
+                        </ul>
+                    </div>
+                    <div class="follow">
+                        <p>Follow Us</p>
+                        <ul>
+                            <li><a href="#"></a>Medium</li>
+                            <li><a href="#"></a>Instagram</li>
+                            <li><a href="#"></a>Twitter</li>
+                            <li><a href="#"></a>Facebook</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="footer-line"></div>
+        <p class="footer-last-text">© 2025 Digitaldastin</p>
     </footer>
 </body>
 </html>
