виправлення помилок в dasteen.html фіксування 'header' в style.css

--- a/dasteen/dasteen.html
+++ b/dasteen/dasteen.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dasteen - Blog Design</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -121,7 +121,7 @@
                     <h5>Fundamental of javascript</h5>
                 </div>
                 <div class="author">
-                    <img src="photo/author.png" alt="autor">
+                    <img src="photo/author.png" alt="author">
                     <div class="author-info">
                         <h6>Dasteen</h6>
                         <p>Jan 10, 2022∙3 min read</p>
@@ -134,7 +134,7 @@
                     <h5>Fundamental of javascript</h5>
                 </div>
                 <div class="author">
-                    <img src="photo/author.png" alt="autor">
+                    <img src="photo/author.png" alt="author">
                     <div class="author-info">
                         <h6>Dasteen</h6>
                         <p>Jan 10, 2022∙3 min read</p>
@@ -147,7 +147,7 @@
                     <h5>Fundamental of javascript</h5>
                 </div>
                 <div class="author">
-                    <img src="photo/author.png" alt="autor">
+                    <img src="photo/author.png" alt="author">
                     <div class="author-info">
                         <h6>Dasteen</h6>
                         <p>Jan 10, 2022∙3 min read</p>
@@ -160,7 +160,7 @@
                     <h5>Fundamental of javascript</h5>
                 </div>
                 <div class="author">
-                    <img src="photo/author.png" alt="autor">
+                    <img src="photo/author.png" alt="author">
                     <div class="author-info">
                         <h6>Dasteen</h6>
                         <p>Jan 10, 2022∙3 min read</p>
@@ -184,7 +184,7 @@
                         <h5>Fundamental of javascript</h5>
                     </div>
                     <div class="author">
-                        <img src="photo/author.png" alt="autor">
+                        <img src="photo/author.png" alt="author">
                         <div class="author-info">
                             <h6>Dasteen</h6>
                             <p>Jan 10, 2022∙3 min read</p>
@@ -197,7 +197,7 @@
                         <h5>Fundamental of javascript</h5>
                     </div>
                     <div class="author">
-                        <img src="photo/author.png" alt="autor">
+                        <img src="photo/author.png" alt="author">
                         <div class="author-info">
                             <h6>Dasteen</h6>
                             <p>Jan 10, 2022∙3 min read</p>
@@ -210,7 +210,7 @@
                         <h5>Fundamental of javascript</h5>
                     </div>
                     <div class="author">
-                        <img src="photo/author.png" alt="autor">
+                        <img src="photo/author.png" alt="author">
                         <div class="author-info">
                             <h6>Dasteen</h6>
                             <p>Jan 10, 2022∙3 min read</p>
@@ -223,7 +223,7 @@
                         <h5>Fundamental of javascript</h5>
                     </div>
                     <div class="author">
-                        <img src="photo/author.png" alt="autor">
+                        <img src="photo/author.png" alt="author">
                         <div class="author-info">
                             <h6>Dasteen</h6>
                             <p>Jan 10, 2022∙3 min read</p>
@@ -248,7 +248,7 @@
                         <h5>Fundamental of javascript</h5>
                     </div>
                     <div class="author">
-                        <img src="photo/author.png" alt="autor">
+                        <img src="photo/author.png" alt="author">
                         <div class="author-info">
                             <h6>Dasteen</h6>
                             <p>Jan 10, 2022∙3 min read</p>
@@ -261,7 +261,7 @@
                         <h5>Fundamental of javascript</h5>
                     </div>
                     <div class="author">
-                        <img src="photo/author.png" alt="autor">
+                        <img src="photo/author.png" alt="author">
                         <div class="author-info">
                             <h6>Dasteen</h6>
                             <p>Jan 10, 2022∙3 min read</p>
@@ -274,7 +274,7 @@
                         <h5>Fundamental of javascript</h5>
                     </div>
                     <div class="author">
-                        <img src="photo/author.png" alt="autor">
+                        <img src="photo/author.png" alt="author">
                         <div class="author-info">
                             <h6>Dasteen</h6>
                             <p>Jan 10, 2022∙3 min read</p>
@@ -287,7 +287,7 @@
                         <h5>Fundamental of javascript</h5>
                     </div>
                     <div class="author">
-                        <img src="photo/author.png" alt="autor">
+                        <img src="photo/author.png" alt="author">
                         <div class="author-info">
                             <h6>Dasteen</h6>
                             <p>Jan 10, 2022∙3 min read</p>
@@ -311,7 +311,7 @@
                         <h5>Fundamental of javascript</h5>
                     </div>
                     <div class="author">
-                        <img src="photo/author.png" alt="autor">
+                        <img src="photo/author.png" alt="author">
                         <div class="author-info">
                             <h6>Dasteen</h6>
                             <p>Jan 10, 2022∙3 min read</p>
@@ -324,7 +324,7 @@
                         <h5>Fundamental of javascript</h5>
                     </div>
                     <div class="author">
-                        <img src="photo/author.png" alt="autor">
+                        <img src="photo/author.png" alt="author">
                         <div class="author-info">
                             <h6>Dasteen</h6>
                             <p>Jan 10, 2022∙3 min read</p>
@@ -337,7 +337,7 @@
                         <h5>Fundamental of javascript</h5>
                     </div>
                     <div class="author">
-                        <img src="photo/author.png" alt="autor">
+                        <img src="photo/author.png" alt="author">
                         <div class="author-info">
                             <h6>Dasteen</h6>
                             <p>Jan 10, 2022∙3 min read</p>
@@ -350,7 +350,7 @@
                         <h5>Fundamental of javascript</h5>
                     </div>
                     <div class="author">
-                        <img src="photo/author.png" alt="autor">
+                        <img src="photo/author.png" alt="author">
                         <div class="author-info">
                             <h6>Dasteen</h6>
                             <p>Jan 10, 2022∙3 min read</p>
@@ -425,7 +425,6 @@
                     </div>
                 </div>
             </div>
-        </div>
         <div class="footer-line"></div>
         <p class="footer-last-text">© 2025 Digitaldastin</p>
     </footer>
