змінив в dasteen.html 'section-article' добавив відстань в style.css 'header-article' добавив в style.css 'article-card'>'hover'

--- a/dasteen/dasteen.html
+++ b/dasteen/dasteen.html
@@ -104,7 +104,7 @@
             </ul>
     </section>
     <section class="article-post">
-        <section class="article">
+        <div class="article">
         <div class="header-article">
             <h4>Featured Article</h4>
             <a href="#" class="art-link">
@@ -130,8 +130,8 @@
             </div>
             <div class="article-card">
                 <div class="article-title">
-                    <img src="photo/fundament-js.png" alt="fundamental of js">
-                    <h5>Fundamental of javascript</h5>
+                    <img src="photo/grid-css.png" alt="grid css">
+                    <h5>Grid CSS make your life easier</h5>
                 </div>
                 <div class="author">
                     <img src="photo/author.png" alt="author">
@@ -143,8 +143,8 @@
             </div>
             <div class="article-card">
                 <div class="article-title">
-                    <img src="photo/fundament-js.png" alt="fundamental of js">
-                    <h5>Fundamental of javascript</h5>
+                    <img src="photo/animation-css.png" alt="animation css">
+                    <h5>Make animated light mode and dark mode toggle with CSS</h5>
                 </div>
                 <div class="author">
                     <img src="photo/author.png" alt="author">
@@ -156,8 +156,8 @@
             </div>
             <div class="article-card">
                 <div class="article-title">
-                    <img src="photo/fundament-js.png" alt="fundamental of js">
-                    <h5>Fundamental of javascript</h5>
+                    <img src="photo/games-react-js.png" alt="games react js">
+                    <h5>Make tic tac toe games with react JS</h5>
                 </div>
                 <div class="author">
                     <img src="photo/author.png" alt="author">
@@ -180,8 +180,8 @@
             <div class="card-post">
                 <div class="article-card">
                     <div class="article-title">
-                        <img src="photo/fundament-js.png" alt="fundamental of js">
-                        <h5>Fundamental of javascript</h5>
+                        <img src="photo/flexbox-css.png" alt="flexbox css">
+                        <h5>Flexbox cSS : Everything you need to know</h5>
                     </div>
                     <div class="author">
                         <img src="photo/author.png" alt="author">
@@ -193,8 +193,8 @@
                 </div>
                 <div class="article-card">
                     <div class="article-title">
-                        <img src="photo/fundament-js.png" alt="fundamental of js">
-                        <h5>Fundamental of javascript</h5>
+                        <img src="photo/grid-css.png" alt="grid css">
+                        <h5>Grid CSS make your life easier</h5>
                     </div>
                     <div class="author">
                         <img src="photo/author.png" alt="author">
@@ -206,8 +206,8 @@
                 </div>
                 <div class="article-card">
                     <div class="article-title">
-                        <img src="photo/fundament-js.png" alt="fundamental of js">
-                        <h5>Fundamental of javascript</h5>
+                        <img src="photo/make-div.png" alt="make div">
+                        <h5>3 easy way to make div center</h5>
                     </div>
                     <div class="author">
                         <img src="photo/author.png" alt="author">
@@ -219,8 +219,8 @@
                 </div>
                 <div class="article-card">
                     <div class="article-title">
-                        <img src="photo/fundament-js.png" alt="fundamental of js">
-                        <h5>Fundamental of javascript</h5>
+                        <img src="photo/animation-css.png" alt="animation css">
+                        <h5>Make animated light mode and dark mode toggle with CSS</h5>
                     </div>
                     <div class="author">
                         <img src="photo/author.png" alt="author">
@@ -231,7 +231,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="header-article-js">
                 <h4>javascript</h4>
                 <a href="#" class="art-link">
@@ -244,8 +243,8 @@
             <div class="card-post">
                 <div class="article-card">
                     <div class="article-title">
-                        <img src="photo/fundament-js.png" alt="fundamental of js">
-                        <h5>Fundamental of javascript</h5>
+                        <img src="photo/learn-js.png" alt="learn js">
+                        <h5>array in javasript - Learn JS #3</h5>
                     </div>
                     <div class="author">
                         <img src="photo/author.png" alt="author">
@@ -270,8 +269,8 @@
                 </div>
                 <div class="article-card">
                     <div class="article-title">
-                        <img src="photo/fundament-js.png" alt="fundamental of js">
-                        <h5>Fundamental of javascript</h5>
+                        <img src="photo/portfolio.png" alt="portfolio">
+                        <h5>7 project with javascript you must try for your portfolio</h5>
                     </div>
                     <div class="author">
                         <img src="photo/author.png" alt="author">
@@ -283,7 +282,7 @@
                 </div>
                 <div class="article-card">
                     <div class="article-title">
-                        <img src="photo/fundament-js.png" alt="fundamental of js">
+                        <img src="photo/calculator-js.png" alt="calculator js">
                         <h5>Fundamental of javascript</h5>
                     </div>
                     <div class="author">
@@ -307,8 +306,8 @@
             <div class="card-post">
                 <div class="article-card">
                     <div class="article-title">
-                        <img src="photo/fundament-js.png" alt="fundamental of js">
-                        <h5>Fundamental of javascript</h5>
+                        <img src="photo/react-js.png" alt="react js">
+                        <h5>first month of leaning react jS</h5>
                     </div>
                     <div class="author">
                         <img src="photo/author.png" alt="author">
@@ -320,8 +319,8 @@
                 </div>
                 <div class="article-card">
                     <div class="article-title">
-                        <img src="photo/fundament-js.png" alt="fundamental of js">
-                        <h5>Fundamental of javascript</h5>
+                        <img src="photo/editor-react-js.png" alt="editor react js">
+                        <h5>build markdown editor with react JS</h5>
                     </div>
                     <div class="author">
                         <img src="photo/author.png" alt="author">
@@ -333,8 +332,8 @@
                 </div>
                 <div class="article-card">
                     <div class="article-title">
-                        <img src="photo/fundament-js.png" alt="fundamental of js">
-                        <h5>Fundamental of javascript</h5>
+                        <img src="photo/started-react-js.png" alt="started react js">
+                        <h5>getting started with react JS</h5>
                     </div>
                     <div class="author">
                         <img src="photo/author.png" alt="author">
@@ -346,8 +345,8 @@
                 </div>
                 <div class="article-card">
                     <div class="article-title">
-                        <img src="photo/fundament-js.png" alt="fundamental of js">
-                        <h5>Fundamental of javascript</h5>
+                        <img src="photo/games-react-js.png" alt="games react js">
+                        <h5>Make tic tac toe games with react JS</h5>
                     </div>
                     <div class="author">
                         <img src="photo/author.png" alt="author">
@@ -359,7 +358,7 @@
                 </div>
             </div>
         <button class="button-art">More Article</button>
-        </section>
+        </div>
     </section>
         <section class="section-sub">
             <div class="subscribe">
